@@ -14,14 +14,15 @@
 package solutions.bellatrix.web.services;
 
 import com.google.common.base.Strings;
+import org.openqa.selenium.TimeoutException;
 import org.openqa.selenium.support.ui.WebDriverWait;
 import solutions.bellatrix.core.configuration.ConfigurationService;
 import solutions.bellatrix.web.configuration.WebSettings;
 
-import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.*;
 import java.util.stream.Collectors;
 
@@ -35,48 +36,31 @@ public class NavigationService extends WebService {
         getWrappedDriver().navigate().to(url);
     }
 
-    public void NavigateToLocalPage(String filePath)
-    {
-//        var assembly = Assembly.GetExecutingAssembly();
-//        string path = Path.GetDirectoryName(assembly.Location);
-//
-//        string pageFilePath = Path.Combine(path ?? throw new InvalidOperationException(), filePath);
-//
-//        if (WrappedWebDriverCreateService.BrowserConfiguration.BrowserType.Equals(BrowserType.Safari) || WrappedWebDriverCreateService.BrowserConfiguration.BrowserType.Equals(BrowserType.Firefox) || WrappedWebDriverCreateService.BrowserConfiguration.BrowserType.Equals(BrowserType.FirefoxHeadless))
-//        {
-//            pageFilePath = string.Concat("file:///", pageFilePath);
-//        }
-
-//        if (RuntimeInformation.IsOSPlatform(OSPlatform.OSX))
-//        {
-//            pageFilePath = pageFilePath.Replace('\\', '/').Replace("file:////", "file://////").Replace(" ", "%20");
-//        }
-//
-//        if (!WrappedWebDriverCreateService.BrowserConfiguration.BrowserType.Equals(BrowserType.Safari))
-//        {
-//            Navigate(new Uri(pageFilePath, uriKind: UriKind.Absolute));
-//        }
-//        else
-//        {
-//            Navigate(pageFilePath);
-//        }
+    public void toLocalPage(String filePath) {
+        URL testAppUrl = Thread.currentThread().getContextClassLoader().getResource(filePath);
+        if (testAppUrl != null) {
+            to(testAppUrl.toString());
+        } else {
+            testAppUrl = getClass().getClassLoader().getResource(filePath);
+            if (testAppUrl != null) {
+                to(testAppUrl.toString());
+            }
+        }
     }
 
     public void waitForPartialUrl(String partialUrl) {
-        try
-        {
+        try {
             long waitForPartialTimeout = ConfigurationService.get(WebSettings.class).getTimeoutSettings().getWaitForPartialUrl();
             long sleepInterval = ConfigurationService.get(WebSettings.class).getTimeoutSettings().getSleepInterval();
             var webDriverWait = new WebDriverWait(getWrappedDriver(), waitForPartialTimeout, sleepInterval);
             webDriverWait.until(d -> getWrappedDriver().getCurrentUrl().contains(partialUrl));
-        } catch (Exception ex)
-        {
-//            UrlNotNavigatedEvent?.Invoke(this, new UrlNotNavigatedEventArgs(ex));
+        } catch (TimeoutException ex) {
+            // TODO: UrlNotNavigatedEvent?.Invoke(this, new UrlNotNavigatedEventArgs(ex));
             throw ex;
         }
     }
 
-    public List<String> GetQueryParameter(String parameterName) throws MalformedURLException {
+    public List<String> getQueryParameter(String parameterName) throws MalformedURLException {
         return splitQuery(getWrappedDriver().getCurrentUrl()).get(parameterName);
     }
 
@@ -85,24 +69,17 @@ public class NavigationService extends WebService {
             return Collections.emptyMap();
         }
         return Arrays.stream(new URL(url).getQuery().split("&"))
-                .map(it -> {
-                    try {
-                        return splitQueryParameter(it);
-                    } catch (UnsupportedEncodingException e) {
-                        e.printStackTrace();
-                    }
-                    return null;
-                })
+                .map(this::splitQueryParameter)
                 .collect(Collectors.groupingBy(AbstractMap.SimpleImmutableEntry::getKey, LinkedHashMap::new, mapping(Map.Entry::getValue, toList())));
     }
 
-    private AbstractMap.SimpleImmutableEntry<String, String> splitQueryParameter(String it) throws UnsupportedEncodingException {
+    private AbstractMap.SimpleImmutableEntry<String, String> splitQueryParameter(String it) {
         final int idx = it.indexOf("=");
         final String key = idx > 0 ? it.substring(0, idx) : it;
-        final String value = idx > 0 && it.length() > idx + 1 ? it.substring(idx + 1) : null;
+        final String value = idx > 0 && it.length() > idx + 1 ? it.substring(idx + 1) : "";
         return new AbstractMap.SimpleImmutableEntry<>(
-                URLDecoder.decode(key, "UTF-8"),
-                URLDecoder.decode(value, "UTF-8")
+                URLDecoder.decode(key, StandardCharsets.UTF_8),
+                URLDecoder.decode(value, StandardCharsets.UTF_8)
         );
     }
 }
